Add a test for reparenting

--- a/test-harness.html
+++ b/test-harness.html
@@ -29,6 +29,7 @@ var tests = [
   'test-path.html',
   'test-pause.html',
   'test-playback-rate.html',
+  'test-reparent.html',
   'test-seq-speed.html',
   'test-step.html',
   'test-svg-anim.html',
