--- a/test-svg-anim.html
+++ b/test-svg-anim.html
@@ -15,7 +15,17 @@ limitations under the License.
 -->
 
 <!DOCTYPE html>
+<style>
+.anim {
+  fill: lightsteelblue;
+}
+
+.expectation {
+  fill: red;
+}
+</style>
 <svg>
+	<rect class="expectation" x="400px" y="10px" width="100px" height="100px"></rect>
 	<rect class="anim" x="100px" y="10px" width="100px" height="100px"></rect>
 </svg>
 <script src="web-animation.js"></script>
