--- a/test-to-animation.html
+++ b/test-to-animation.html
@@ -20,7 +20,7 @@ limitations under the License.
 	left: 0px;
 	width: 100px;
 	height: 100px;
-	background-color: #FAA;
+	background-color: lightsteelblue;
 	position: absolute;
 }
 
@@ -44,7 +44,19 @@ limitations under the License.
 	left: 200px;
 }
 
+.expectation {
+	background-color: red;
+	position: absolute;
+	width: 100px;
+	height: 100px;
+}
+
 </style>
+
+<div class="expectation" style="top: 0px; left: 100px;"></div>
+<div class="expectation" style="top: 100px; left: 200px;"></div>
+<div class="expectation" style="top: 200px; left: 300px;"></div>
+<div class="expectation" style="top: 300px; left: 400px;"></div>
 
 <div>
 	<div id="a" class="anim"></div>
