Added test expectations. Added test to test harness.

--- a/test-harness.html
+++ b/test-harness.html
@@ -19,6 +19,7 @@ var tests = [
   'test-composite-transforms.html',
   'test-compositor.html',
   'test-fill-values.html',
+  'test-grouped-anim-func.html',
   'test-iterations-basic.html',
   'test-iterations-fill-declarative.html',
   'test-iterations-fill.html',
