--- a/test-grouped-anim-func.html
+++ b/test-grouped-anim-func.html
@@ -15,13 +15,22 @@ limitations under the License.
 -->
 
 <!DOCTYPE html>
+<style>
+.anim {
+  fill: lightsteelblue;
+}
+.expectation {
+  fill: red;
+}
+</style>
 <svg>
+	<rect class="expectation" x="400px" y="200px" width="50px" height="100px"></rect>
 	<rect class="anim" x="100px" y="10px" width="100px" height="100px"></rect>
 </svg>
 <script src="web-animation.js"></script>
 <script>
 var rect = document.querySelector(".anim")
 
-var a = new Anim(rect, {x: "400px", y: "200px", width: ["100px", "20px", "50px"]}, 1);
+var a = new Anim(rect, {x: "400px", y: ["300px", "200px"], width: ["100px", "20px", "50px"]}, 1);
 
 </script>
