renamed groupedAnimFunc and updated test.

--- a/test-grouped-anim-func.html
+++ b/test-grouped-anim-func.html
@@ -31,6 +31,6 @@ limitations under the License.
 <script>
 var rect = document.querySelector(".anim")
 
-var a = new Anim(rect, {x: "400px", y: ["300px", "200px"], width: ["100px", "20px", "50px"]}, 1);
+var a = new Animation(rect, {x: "400px", y: ["300px", "200px"], width: ["100px", "20px", "50px"]}, 1);
 
 </script>
