updated declarative fill to fillMode and fixed test-iterations-fill-declarative.

--- a/test-iterations-fill-declarative.html
+++ b/test-iterations-fill-declarative.html
@@ -60,10 +60,10 @@ limitations under the License.
 	<div style="width: 300px;" class="expected"><div class="anim c"></div></div>
 	<div style="width: 300px;" class="expected"><div class="anim d"></div></div>
 	<par startDelay="1" duration="5" iterationCount="3" playbackRate="2" direction="normal" startTime="1" id="par">
-		<animation startDelay="1" duration="1" iterationCount="2" fill="none" prop="left" from="100px" to="200px" playbackRate="0.8" startTime="1" resolutionStrategy="selector: .a" id="anim"></animation>
-		<animation startDelay="1" duration="1" iterationCount="2" fill="backwards" prop="left" from="100px" to="200px" playbackRate="0.8"startTime="1" resolutionStrategy="selector: .b"></animation>
-		<animation startDelay="1" duration="1" iterationCount="2" fill="forwards" prop="left" from="100px" to="200px" playbackRate="0.8" startTime="1" resolutionStrategy="selector: .c"></animation>		
-		<animation startDelay="1" duration="1" iterationCount="2" fill="both" prop="left" from="100px" to="200px" playbackRate="0.8" startTime="1" resolutionStrategy="selector: .d"></animation>
+		<animation startDelay="1" duration="1" iterationCount="2" fillMode="none" prop="left" from="100px" to="200px" playbackRate="0.8" startTime="1" resolutionStrategy="selector: .a" id="anim"></animation>
+		<animation startDelay="1" duration="1" iterationCount="2" fillMode="backwards" prop="left" from="100px" to="200px" playbackRate="0.8"startTime="1" resolutionStrategy="selector: .b"></animation>
+		<animation startDelay="1" duration="1" iterationCount="2" fillMode="forwards" prop="left" from="100px" to="200px" playbackRate="0.8" startTime="1" resolutionStrategy="selector: .c"></animation>		
+		<animation startDelay="1" duration="1" iterationCount="2" fillMode="both" prop="left" from="100px" to="200px" playbackRate="0.8" startTime="1" resolutionStrategy="selector: .d"></animation>
 	</par>
 </div>
 <div class="animContainer" id="cb">
@@ -72,10 +72,10 @@ limitations under the License.
 	<div style="width: 100px;" class="expected"><div class="anim c"></div></div>
 	<div style="width: 100px;" class="expected"><div class="anim d"></div></div>
 	<par startDelay="1" duration="5" iterationCount="3" playbackRate="2" direction="reverse" startTime="1">
-		<animation startDelay="1" duration="1" iterationCount="2" fill="none" prop="left" from="100px" to="200px" playbackRate="0.8" startTime="1" resolutionStrategy="selector: .a"></animation>		
-		<animation startDelay="1" duration="1" iterationCount="2" fill="backwards" prop="left" from="100px" to="200px" playbackRate="0.8"startTime="1" resolutionStrategy="selector: .b"></animation>
-		<animation startDelay="1" duration="1" iterationCount="2" fill="forwards" prop="left" from="100px" to="200px" playbackRate="0.8" startTime="1" resolutionStrategy="selector: .c"></animation>		
-		<animation startDelay="1" duration="1" iterationCount="2" fill="both" prop="left" from="100px" to="200px" playbackRate="0.8" startTime="1" resolutionStrategy="selector: .d"></animation>
+		<animation startDelay="1" duration="1" iterationCount="2" fillMode="none" prop="left" from="100px" to="200px" playbackRate="0.8" startTime="1" resolutionStrategy="selector: .a"></animation>		
+		<animation startDelay="1" duration="1" iterationCount="2" fillMode="backwards" prop="left" from="100px" to="200px" playbackRate="0.8"startTime="1" resolutionStrategy="selector: .b"></animation>
+		<animation startDelay="1" duration="1" iterationCount="2" fillMode="forwards" prop="left" from="100px" to="200px" playbackRate="0.8" startTime="1" resolutionStrategy="selector: .c"></animation>		
+		<animation startDelay="1" duration="1" iterationCount="2" fillMode="both" prop="left" from="100px" to="200px" playbackRate="0.8" startTime="1" resolutionStrategy="selector: .d"></animation>
 	</par>
 </div>
 <div class="animContainer" id="cc">
@@ -84,10 +84,10 @@ limitations under the License.
 	<div style="width: 300px;" class="expected"><div class="anim c"></div></div>
 	<div style="width: 300px;" class="expected"><div class="anim d"></div></div>
 	<par startDelay="1" duration="5" iterationCount="3" playbackRate="2" direction="alternate" startTime="1">
-		<animation startDelay="1" duration="1" iterationCount="2" fill="none" prop="left" from="100px" to="200px" playbackRate="0.8" startTime="1" resolutionStrategy="selector: .a"></animation>		
-		<animation startDelay="1" duration="1" iterationCount="2" fill="backwards" prop="left" from="100px" to="200px" playbackRate="0.8"startTime="1" resolutionStrategy="selector: .b"></animation>
-		<animation startDelay="1" duration="1" iterationCount="2" fill="forwards" prop="left" from="100px" to="200px" playbackRate="0.8" startTime="1" resolutionStrategy="selector: .c"></animation>		
-		<animation startDelay="1" duration="1" iterationCount="2" fill="both" prop="left" from="100px" to="200px" playbackRate="0.8" startTime="1" resolutionStrategy="selector: .d"></animation>
+		<animation startDelay="1" duration="1" iterationCount="2" fillMode="none" prop="left" from="100px" to="200px" playbackRate="0.8" startTime="1" resolutionStrategy="selector: .a"></animation>		
+		<animation startDelay="1" duration="1" iterationCount="2" fillMode="backwards" prop="left" from="100px" to="200px" playbackRate="0.8"startTime="1" resolutionStrategy="selector: .b"></animation>
+		<animation startDelay="1" duration="1" iterationCount="2" fillMode="forwards" prop="left" from="100px" to="200px" playbackRate="0.8" startTime="1" resolutionStrategy="selector: .c"></animation>		
+		<animation startDelay="1" duration="1" iterationCount="2" fillMode="both" prop="left" from="100px" to="200px" playbackRate="0.8" startTime="1" resolutionStrategy="selector: .d"></animation>
 	</par>
 </div>
 
@@ -97,10 +97,10 @@ limitations under the License.
 	<div style="width: 100px;" class="expected"><div class="anim c"></div></div>
 	<div style="width: 100px;" class="expected"><div class="anim d"></div></div>
 	<par startDelay="1" duration="5" iterationCount="3" playbackRate="2" direction="alternate-reverse" startTime="1">
-		<animation startDelay="1" duration="1" iterationCount="2" fill="none" prop="left" from="100px" to="200px" playbackRate="0.8" startTime="1" resolutionStrategy="selector: .a"></animation>		
-		<animation startDelay="1" duration="1" iterationCount="2" fill="backwards" prop="left" from="100px" to="200px" playbackRate="0.8"startTime="1" resolutionStrategy="selector: .b"></animation>
-		<animation startDelay="1" duration="1" iterationCount="2" fill="forwards" prop="left" from="100px" to="200px" playbackRate="0.8" startTime="1" resolutionStrategy="selector: .c"></animation>		
-		<animation startDelay="1" duration="1" iterationCount="2" fill="both" prop="left" from="100px" to="200px" playbackRate="0.8" startTime="1" resolutionStrategy="selector: .d"></animation>
+		<animation startDelay="1" duration="1" iterationCount="2" fillMode="none" prop="left" from="100px" to="200px" playbackRate="0.8" startTime="1" resolutionStrategy="selector: .a"></animation>		
+		<animation startDelay="1" duration="1" iterationCount="2" fillMode="backwards" prop="left" from="100px" to="200px" playbackRate="0.8"startTime="1" resolutionStrategy="selector: .b"></animation>
+		<animation startDelay="1" duration="1" iterationCount="2" fillMode="forwards" prop="left" from="100px" to="200px" playbackRate="0.8" startTime="1" resolutionStrategy="selector: .c"></animation>		
+		<animation startDelay="1" duration="1" iterationCount="2" fillMode="both" prop="left" from="100px" to="200px" playbackRate="0.8" startTime="1" resolutionStrategy="selector: .d"></animation>
 	</par>
 </div>
 <script src="web-animation.js"></script>
