--- a/test-iterations-fill.html
+++ b/test-iterations-fill.html
@@ -101,7 +101,7 @@ limitations under the License.
 <script src="web-animation.js"></script>
 <script>
 
-var fills = ["none", "backwards", "forwards", "both"];
+var fillModes = ["none", "backwards", "forwards", "both"];
 var categories = [".a", ".b", ".c", ".d"]
 
 var directions = ["normal", "reverse", "alternate", "alternate-reverse"]
@@ -117,11 +117,11 @@ function sampleFunc(timeFraction, iteration, target) {
 	target.innerHTML = Math.floor(timeFraction * 1000) / 1000 + " : " + iteration
 }
 
-for (var i = 0; i < fills.length; i++) {
+for (var i = 0; i < fillModes.length; i++) {
 	var divs = document.querySelectorAll(categories[i]);
 	for (var j = 0; j < divs.length; j++) {
-		var anim = new Animation(divs[j], {left: ["100px", "200px"]}, {startDelay: 1, duration: 1, iterationCount: 2, fill: fills[i], playbackRate: 0.8}, groups[j], 1);
-		new Animation(divs[j], {sample: sampleFunc}, {startDelay: 1, duration: 1, iterationCount: 2, fill: fills[i], playbackRate: 0.8}, groups[j], 1);
+		var anim = new Animation(divs[j], {left: ["100px", "200px"]}, {startDelay: 1, duration: 1, iterationCount: 2, fillMode: fillModes[i], playbackRate: 0.8}, groups[j], 1);
+		new Animation(divs[j], {sample: sampleFunc}, {startDelay: 1, duration: 1, iterationCount: 2, fillMode: fillModes[i], playbackRate: 0.8}, groups[j], 1);
 	}
 }
 </script>
