--- a/test-keyframe-creation.html
+++ b/test-keyframe-creation.html
@@ -62,10 +62,10 @@ limitations under the License.
 <script src="web-animation.js"></script>
 <script>
 
-new Anim(document.querySelector("#a"), {left: ["100px", "200px"]}, {startDelay: 1, duration: 1});
-new Anim(document.querySelector("#b"), {left: "200px"}, {startDelay: 1, duration: 1});
-new Anim(document.querySelector("#c"), {left: ["100px", "200px"]}, {duration: 2});
-new Anim(document.querySelector("#d"), {left: "200px"}, {duration: 2});
+new Animation(document.querySelector("#a"), {left: ["100px", "200px"]}, {startDelay: 1, duration: 1});
+new Animation(document.querySelector("#b"), {left: "200px"}, {startDelay: 1, duration: 1});
+new Animation(document.querySelector("#c"), {left: ["100px", "200px"]}, {duration: 2});
+new Animation(document.querySelector("#d"), {left: "200px"}, {duration: 2});
 
 
 </script>
