Updated naming in more tests.

--- a/test-svg-anim.html
+++ b/test-svg-anim.html
@@ -32,6 +32,6 @@ limitations under the License.
 <script>
 var rect = document.querySelector(".anim")
 
-var a = new Anim(rect, {x: "400px"}, 1);
+var a = new Animation(rect, {x: "400px"}, 1);
 
 </script>
