--- a/test-to-animation.html
+++ b/test-to-animation.html
@@ -70,10 +70,10 @@ limitations under the License.
 
 var divs = document.querySelectorAll(".anim");
 
-var group = new ParAnimGroup([], 2, undefined, 1);
+var group = new ParGroup([], 2, undefined, 1);
 
 for (var i = 0; i < divs.length; i++) {
-	var anim = new Anim(divs[i], {left: (100 * (i+1)) + "px"}, 2, group);
+	var anim = new Animation(divs[i], {left: (100 * (i+1)) + "px"}, 2, group);
 }
 
 </script>
