--- a/test-timing-functions.html
+++ b/test-timing-functions.html
@@ -62,10 +62,10 @@ limitations under the License.
 <script src="web-animation.js"></script>
 <script>
 
-new Anim(document.querySelector("#a"), {left: "200px"}, {fill: "forwards", startDelay: 1, duration: 2});
-new Anim(document.querySelector("#b"), {left: "200px"}, {fill: "forwards", startDelay: 1, duration: 2, timingFunc: new TimingFunc("ease-in")});
-new Anim(document.querySelector("#c"), {left: "200px"}, {fill: "forwards", startDelay: 1, duration: 2, timingFunc: new TimingFunc("ease-out")});
-new Anim(document.querySelector("#d"), {left: "200px"}, {fill: "forwards", startDelay: 1, duration: 2, timingFunc: new TimingFunc([0, 0.2, 0.8, 1])});
+new Animation(document.querySelector("#a"), {left: "200px"}, {startDelay: 1, duration: 2});
+new Animation(document.querySelector("#b"), {left: "200px"}, {startDelay: 1, duration: 2, timingFunction: new TimingFunction("ease-in")});
+new Animation(document.querySelector("#c"), {left: "200px"}, {startDelay: 1, duration: 2, timingFunction: new TimingFunction("ease-out")});
+new Animation(document.querySelector("#d"), {left: "200px"}, {startDelay: 1, duration: 2, timingFunction: new TimingFunction([0, 0.2, 0.8, 1])});
 
 
 </script>
