Add test to ensure zero point works for lengths, and fix code because it wasn't..

--- a/test-keyframe-creation.html
+++ b/test-keyframe-creation.html
@@ -48,12 +48,17 @@ limitations under the License.
         top: 500px;
 }
 
+#g {
+        top: 600px;
+        left: 200px;
+}
+
 #expectation {
   position: absolute;
   top: 0px;
   left: 200px;
   width: 100px;
-  height: 600px;
+  height: 700px;
   background: red;
 }
 </style>
@@ -67,6 +72,7 @@ limitations under the License.
 	<div id="d" class="anim"></div>
 	<div id="e" class="anim"></div>
 	<div id="f" class="anim"></div>
+	<div id="g" class="anim"></div>
 </div>
 
 <script src="web-animation.js"></script>
@@ -78,6 +84,7 @@ new Animation(document.querySelector("#c"), {left: ["100px", "200px"]}, {duratio
 new Animation(document.querySelector("#d"), {left: "200px"}, {duration: 2});
 new Animation(document.querySelector("#e"), {left: [{offset: 0, value: "100px"}, {offset: 1, value: "200px"}]}, {duration: 2});
 new Animation(document.querySelector("#f"), {left: [{offset: 0, value: "200px"}, {offset: 0.25, value: "100px"}, {offset: 1, value: "200px"}]}, {duration: 2});
+new Animation(document.querySelector("#g"), {left: [{offset: 0.25, value: "200px"}, {offset: 0.5, value: "100px"}, {offset: 0.75, value: "200px"}], operation: "add"}, {duration: 2});
 
 
 </script>
