--- a/test-harness.html
+++ b/test-harness.html
@@ -26,6 +26,7 @@ var tests = [
   'test-iteration-start.html',
   'test-keyframe-creation.html',
   'test-parent.html',
+  'test-path.html',
   'test-pause.html',
   'test-playback-rate.html',
   'test-seq-speed.html',
