--- a/test-path.html
+++ b/test-path.html
@@ -29,8 +29,16 @@ limitations under the License.
   position: absolute;
   width: 25px;
   height: 25px;
-  top: 87.5px;
-  left: 87.5px;
+  top: 0px;
+  left: 0px;
+}
+#e1 {
+  transform: translate(87.5px, 87.5px);
+  -webkit-transform: translate(87.5px, 87.5px);
+}
+#e2 {
+  transform: translate(87.5px, 237.5px) rotate(63.33deg);
+  -webkit-transform: translate(87.5px, 237.5px) rotate(63.33deg);
 }
 svg {
 position:absolute;
@@ -46,17 +54,17 @@ height: 500px;
     <path id=path2 d="M 100 250 L 300 250 L 200 450 z" stroke="black" stroke-width="1" fill="none" />
 </svg>
 
-<div class="expectation"></div>
-<div id="anim1"></div>
-<div class="expectation" style="top:237.5px"></div>
-<div id="anim2"></div>
+<div id="e1" class="expectation"></div>
+<div id="anim1">&rarr;</div>
+<div id="e2" class="expectation"></div>
+<div id="anim2">&rarr;</div>
 
 
 <script src="web-animation.js"></script>
 <script>
 
 var animFunc = new PathAnimationFunction(
-    document.querySelector('#path1').getAttribute('d'));
+    document.querySelector('#path1'));
 animFunc.rotate = true;
 
 var anim = new Animation(document.querySelector("#anim1"),
@@ -64,7 +72,7 @@ var anim = new Animation(document.querySelector("#anim1"),
     {duration: 2, iterationCount: 2});
 
 var animFunc2 = new PathAnimationFunction(
-    document.querySelector('#path2').getAttribute('d'));
+    document.querySelector('#path2'));
 animFunc2.rotate = true;
 
 var anim2 = new Animation(document.querySelector("#anim2"),
