--- a/test-harness.html
+++ b/test-harness.html
@@ -30,6 +30,7 @@ var tests = [
   'test-pause.html',
   'test-playback-rate.html',
   'test-seq-speed.html',
+  'test-step.html',
   'test-svg-anim.html',
   'test-templating.html',
   'test-timing-functions.html',
