Add test case to harness

--- a/test-harness.html
+++ b/test-harness.html
@@ -15,6 +15,7 @@ limitations under the License.
 -->
 <script>
 var tests = [
+  'test-calc.html',
   'test-change-playback-rate.html',
   'test-color.html',
   'test-composite-transforms.html',
