--- a/test-harness.html
+++ b/test-harness.html
@@ -16,6 +16,7 @@ limitations under the License.
 <script>
 var tests = [
   'test-change-playback-rate.html',
+  'test-color.html',
   'test-composite-transforms.html',
   'test-compositor.html',
   'test-fill-values.html',
@@ -31,6 +32,8 @@ var tests = [
   'test-playback-rate.html',
   'test-reparent.html',
   'test-seq-speed.html',
+  'test-start-time.html',
+  'test-start-time-iterations.html',
   'test-step.html',
   'test-svg-anim.html',
   'test-templating.html',
