--- a/test-calc.html
+++ b/test-calc.html
@@ -19,29 +19,108 @@ limitations under the License.
 .anim {
   fill: lightsteelblue;
   background-color: lightsteelblue;
-  width: 100px;
-  height: 200px;
-}
-
-.expectation {
-  fill: red;
-  background-color: lightsteelblue;
+  height: 50px;
   position: absolute;
 }
 
-.outer {
+#a {
+  width: 50px;
+}
+
+#b {
+  width: 25%;
+  top: 50px;
+}
+
+#c {
+  width: 50px;
+  top: 100px;
+}
+
+#d {
+  width: -webkit-calc(25px + 12.5%);
+  top: 150px;
+}
+
+#e {
+  width: 50px;
+  top: 200px;
+}
+
+#f {
+  width: 25%;
+  top: 250px;
+}
+
+#g {
+  width: -webkit-calc(100px - 25%);
+  top: 300px;
+}
+
+.expectation {
+  background-color: red;
+  position: absolute;
+  left: 0px;
+  height: 50px;
+}
+
+.expectation2 {
+  background-color: #F88;
+  position: absolute;
+  top: 0px;
+  left: 0px;
   width: 400px;
+  height: 350px;
+}
+
+.outer {
+  width: 200px;
   background-color: green;
+  position: absolute;
+  top: 50px;
+  left: 50px;
+  height: 350px;
 }
 
 </style>
+
+Blue lines should all hit the deep red boundary at the same time, then completely cover the light red box when the animation has finished.
+
 <div class="outer">
-<div class="anim"></div>
+<div class="expectation2"></div>
+<div class="expectation" style="top: 0px; width: 150px"></div>
+<div class="anim" id="a"></div>
+<div class="expectation" style="top: 50px; width: 187.5px"></div>
+<div class="anim" id="b"></div>
+<div class="expectation" style="top: 100px; width: 225px"></div>
+<div class="anim" id="c"></div>
+<div class="expectation" style="top: 150px; width: 168.75px"></div>
+<div class="anim" id="d"></div>
+<div class="expectation" style="top: 200px; width: 168.75px"></div>
+<div class="anim" id="e"></div>
+<div class="expectation" style="top: 250px; width: 218.75px"></div>
+<div class="anim" id="f"></div>
+<div class="expectation" style="top: 300px; width: 131.25px"></div>
+<div class="anim" id="g"></div>
 </div>
 <script src="web-animation.js"></script>
 <script>
 
 new Animation(document.querySelector(".outer"), {width: "800px"}, 2);
-new Animation(document.querySelector(".anim"), {width: "50%"}, 2);
+
+// 50px -> 0px linear, 0% -> 50% (0px -> 400px quadratic)
+new Animation(document.querySelector("#a"), {width: "50%"}, 2);
+// 25% -> 50% (50px -> 400px quadratic)
+new Animation(document.querySelector("#b"), {width: "50%"}, 2);
+// 50px -> 400px linear
+new Animation(document.querySelector("#c"), {width: "400px"}, 2);
+// 25px -> 0px linear, 12.5% -> 50% (25px -> 400px quadratic)
+new Animation(document.querySelector("#d"), {width: "50%"}, 2);
+// 50px -> 100px linear, 0% -> 37.5% (0px -> 300px quadratic)
+new Animation(document.querySelector("#e"), {width: "-webkit-calc(37.5% + 100px)"}, 2);
+// 0px -> 100px linear, 25% -> 37.5% (50px -> 300px quadratic)
+new Animation(document.querySelector("#f"), {width: "-webkit-calc(37.5% + 100px)"}, 2);
+// 100px -> 100px linear, -25% -> 37.5% (-50px -> 300px quadratic)
+new Animation(document.querySelector("#g"), {width: "-webkit-calc(37.5% + 100px)"}, 2);
 
 </script>
