--- a/test-harness.html
+++ b/test-harness.html
@@ -31,6 +31,7 @@ var tests = [
   'test-path.html',
   'test-pause.html',
   'test-playback-rate.html',
+  'test-preset-timings.html',
   'test-reparent.html',
   'test-seq-speed.html',
   'test-start-time.html',
