--- a/test-reparent.html
+++ b/test-reparent.html
@@ -42,12 +42,12 @@ var anim = new Animation(document.getElementById("a"), {left: ["100px", "500px"]
 
 // After 2.5s, move it to a parallel group and run that.
 setTimeout(function() {
-  var group = new ParGroup([anim], {direction: "alternate", duration: 2.0, iterationCount: 2.0});
+  new ParGroup([anim], {direction: "alternate", duration: 2.0, iterationCount: 2.0});
 }, 2500);
 
 // Move it to a new group and run that.
 setTimeout(function() {
-  var group = new ParGroup([anim], {duration: 1.5});
+  new ParGroup([anim], {duration: 1.5});
 }, 8000);
 
 </script>
