--- a/test-iterations-basic.html
+++ b/test-iterations-basic.html
@@ -17,39 +17,39 @@ limitations under the License.
 <!DOCTYPE html>
 <style>
 .animContainer {
-	position: absolute;
-	left: 0px;
-	height: 75px;
-	border-right: 1px solid black;
+  position: absolute;
+  left: 0px;
+  height: 75px;
+  border-right: 1px solid black;
 }
 
 .anim {
-	left: 0px;
-	width: 100px;
-	height: 25px;
-	background-color: #FAA;
-	position: relative;
+  left: 0px;
+  width: 100px;
+  height: 25px;
+  background-color: #FAA;
+  position: relative;
 }
 
 #ca {
-	top: 50px;
-	width: 280px;
+  top: 50px;
+  width: 280px;
 }
 
 #cb {
-	top: 150px;
-	width: 100px;
+  top: 150px;
+  width: 100px;
 }
 
 #cc {
-	top: 250px;
-	width: 100px;
+  top: 250px;
+  width: 100px;
 }
 
 
 #cd {
-	top: 350px;
-	width: 280px;
+  top: 350px;
+  width: 280px;
 }
 </style>
 
@@ -57,27 +57,27 @@ limitations under the License.
 <div>Right edge of each box should align with black line at end of test.</div>
 
 <div class="animContainer" id="ca">
-	<div class="anim a"></div>
-	<div class="anim b"></div>
-	<div class="anim c"></div>
+  <div class="anim a"></div>
+  <div class="anim b"></div>
+  <div class="anim c"></div>
 </div>
 
 <div class="animContainer" id="cb">
-	<div class="anim a"></div>
-	<div class="anim b"></div>
-	<div class="anim c"></div>
+  <div class="anim a"></div>
+  <div class="anim b"></div>
+  <div class="anim c"></div>
 </div>
 
 <div class="animContainer" id="cc">
-	<div class="anim a"></div>
-	<div class="anim b"></div>
-	<div class="anim c"></div>
+  <div class="anim a"></div>
+  <div class="anim b"></div>
+  <div class="anim c"></div>
 </div>
 
 <div class="animContainer" id="cd">
-	<div class="anim a"></div>
-	<div class="anim b"></div>
-	<div class="anim c"></div>
+  <div class="anim a"></div>
+  <div class="anim b"></div>
+  <div class="anim c"></div>
 </div>
 
 <script src="web-animation.js"></script>
@@ -89,18 +89,18 @@ var directions = ["normal", "reverse", "alternate", "alternate-reverse"];
 var groups = [];
 
 for (var i = 0; i < directions.length; i++) {
-	var dir = directions[i];
-	var group = new ParGroup([], {iterationCount: 2, direction: dir, duration: 4}, undefined, 1);
-	groups.push(group);
+  var dir = directions[i];
+  var group = new ParGroup([], {iterationCount: 2, direction: dir, duration: 4}, undefined, 1);
+  groups.push(group);
 }
 
 for (var i = 0; i < containers.length; i++) {
-	var container = document.getElementById(containers[i]);
-	<!-- Test basic use. -->
-	new Animation(container.getElementsByClassName("a")[0], {left: ["100px", "300px"]}, {duration: 1, iterationCount: 3.4}, groups[i]);
-	<!-- Test integer iterationCount. -->
-	new Animation(container.getElementsByClassName("b")[0], {left: ["100px", "180px"]}, {duration: 1, iterationCount: 3.0}, groups[i]);
-	<!-- Test zero iterationCount. -->
-	new Animation(container.getElementsByClassName("c")[0], {left: ["180px", "300px"]}, {duration: 1, iterationCount: 0.0}, groups[i]);
+  var container = document.getElementById(containers[i]);
+  // Test basic use.
+  new Animation(container.getElementsByClassName("a")[0], {left: ["100px", "300px"]}, {duration: 1, iterationCount: 3.4}, groups[i]);
+  // Test integer iterationCount.
+  new Animation(container.getElementsByClassName("b")[0], {left: ["100px", "180px"]}, {duration: 1, iterationCount: 3.0}, groups[i]);
+  // Test zero iterationCount.
+  new Animation(container.getElementsByClassName("c")[0], {left: ["180px", "300px"]}, {duration: 1, iterationCount: 0.0}, groups[i]);
 }
 </script>
